--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
 <h1>GIT DESDE CERO</h1>    
 <P>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis qui vel ipsa ut velit enim, reiciendis natus nesciunt eveniet minus? Itaque necessitatibus voluptatum voluptatem natus sed culpa. Dignissimos, animi. Aperiam, qui aliquam explicabo fugiat delectus earum aut corporis animi at temporibus error, ab, neque sapiente similique ducimus atque voluptatum. Molestias.</P>
 
+<h2>Segundo cambio</h2>
+<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem id blanditiis aliquam ratione dignissimos, reiciendis a repellat cumque. Nisi dolorum non earum excepturi autem consectetur est corrupti ipsam beatae asperiores.</p>
+
 </body>
 </html>
